--- a/trialapp/templates/projects/project.html
+++ b/trialapp/templates/projects/project.html
@@ -1,4 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
 <h1>Hello</h1>
+<h1>{{profiles.id}}</h1>
+<h1>{{profiles.name}}</h1>
+<h1>{{profiles.description}}</h1>
 {% endblock content %}
